# csv-clean

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
csv_clean/: __init__.py  core.py
tests/: test_csv_clean.py
